minitrace-macro/tests/trace/ui/err/004-has-all-sync.stderr
error: `enter_on_poll` can not be applied on non-async function
 --> tests/trace/ui/err/004-has-all-sync.rs:3:1
  |
3 | #[trace(name = "test_span", enter_on_poll = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/trace/ui/err/004-has-all-sync.rs:5:5
  |
5 |     a
  |     ^ expected `()`, found `u32`
  |
help: you might have meant to return this value
  |
5 |     return a;
  |     ++++++  +
